--- a/src/Pages/ByType/ByType.module.css
+++ b/src/Pages/ByType/ByType.module.css
@@ -6,9 +6,8 @@
     margin: 10px auto;
     display: flex;
     flex-direction: column;
-    align-items: center; 
     border-bottom: 20px solid #1a8ce2;
-
+    align-items: center; 
 }
 
 .list {
@@ -73,7 +72,7 @@
     font-size: 22px;
     font-weight: 500;
     margin: 10px;
-
+    
 }
 
 .tipesOpt {
@@ -85,7 +84,6 @@
 
 .tipesOpt a {
     text-decoration: none;
-
     text-align: center;
     font-family: Poppins;
     color: #111;
@@ -94,4 +92,9 @@
     border-radius: 5px;
     cursor: pointer;
     box-shadow: 0px 0px 3px #11111185;
+}
+
+.tipesOpt a:last-child {
+    
+    background-color: #bcbcbc;
 }
