--- a/src/Partials/Header/Header.module.css
+++ b/src/Partials/Header/Header.module.css
@@ -25,3 +25,32 @@
     width: 90%;
     font-family: Poppins;
 }
+
+.opts {
+    width: 40%;
+    position: absolute;
+    max-height: 300px;
+    background: #eee;
+    top: 80px;
+    z-index: 99;
+    display: flex;
+    transition: all .5s;
+    flex-direction: column;
+    overflow-y: auto;
+}
+
+.opt {
+    display: flex;
+    text-decoration: none;
+    color: #222;
+    font-family: Poppins;
+    font-size: 22px;
+    padding: 10px;
+    text-transform: capitalize;
+
+}
+
+.opt:hover {
+    transition: all .1s;
+    background: #00000013;
+}
