--- a/src/Pages/Home/Home.module.css
+++ b/src/Pages/Home/Home.module.css
@@ -2,11 +2,11 @@
     width: 80%;
     max-width: 1024px;
     background-color: #EEE;
-    padding:  0;
+    padding: 0;
     margin: 10px auto;
     display: flex;
     flex-direction: column;
-    align-items: center; 
+    align-items: center;
     border-bottom: 20px solid #1a8ce2;
 
 }
@@ -15,7 +15,7 @@
     margin: 15px;
     display: grid;
     gap: 20px;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr ; 
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     width: 80%;
 }
 
@@ -24,7 +24,7 @@
     background-color: #1a8ce2;
     border: #1a8ce2 1px solid;
     outline: none;
-    margin: 25px; 
+    margin: 25px;
     width: 200px;
     color: #eee;
     font-family: Poppins;
@@ -78,7 +78,7 @@
 
 .tipesOpt {
     display: grid;
-    grid-template: "1fr 1fr 1fr 1fr 1fr" ;
+    grid-template: "1fr 1fr 1fr 1fr 1fr";
     gap: 15px;
     margin: 10px;
 }
@@ -94,4 +94,47 @@
     border-radius: 5px;
     cursor: pointer;
     box-shadow: 0px 0px 3px #11111185;
+}
+
+@media (max-width: 1124px) {
+    .list {
+        width: 90%;
+    }
+}
+
+@media (max-width: 1000px) {
+    .list {
+        grid-template: "1fr 1fr 1fr 1fr";
+    }
+}
+@media (max-width: 800px) {
+    .list {
+        grid-template: "1fr 1fr 1fr ";
+    }
+}
+@media (max-width: 600px) {
+    .list {
+        grid-template: "1fr 1fr ";
+    }
+    .filterOpt.enable {
+        height: 260px;
+    }
+    .tipesOpt {
+        grid-template: "1fr 1fr 1fr 1fr";
+
+    }
+}
+@media (max-width: 400px) {
+    .list {
+        grid-template: "1fr";
+        width: 80%;
+    }
+
+    .filterOpt.enable {
+        height: 300px;
+    }
+    .tipesOpt {
+        grid-template: "1fr 1fr 1fr ";
+
+    }
 }
