--- a/src/Pages/Pokemon/Pokemon.module.css
+++ b/src/Pages/Pokemon/Pokemon.module.css
@@ -68,20 +68,103 @@
 }
 
 .id {
-    color: #444;
+    color: #666;
     font-weight: 400;
 }
 
 .infos {
-    min-height: 100vh;
+    /* min-height: 100vh; */
     width: 80%;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
     gap: 10px;
     margin: 50px auto;
+}
+
+.pt1{
+    display: flex;
+    justify-content: space-between;
+
 }
 
 .infos img {
     width: 80%;
     margin: auto;
+}
+
+.info {
+    width: 100%;
+    height: 250px;
+    background-color: #666;
+    font-size: 25px;
+    border-radius: 10px;
+    padding: 15px;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    color: #ccc;
+}
+
+.info span {
+    color: #eee;
+} 
+
+.types {
+    display: flex;
+
+}
+
+.type {
+    font-size: 16px;
+    padding: 5px 20px;
+    font-family: Poppins;
+    color: #eee;
+    border-radius: 10px;
+    text-transform: capitalize;
+    margin-right:  5px;
+}
+
+.basestatus {
+    width: 100%;
+    /* background-color: #616161; */
+}
+
+.status {
+    width: 100%;
+}
+
+.range {
+    height: 15px;
+    width: 100%;
+    background-color: #616161;
+    display: flex;
+    border-radius: 5px;
+    overflow: hidden;
+
+}
+
+.fill {
+    height: 15px;
+    background-color: rgb(0, 218, 0);
+    
+}
+
+@media (max-width: 1000px) {
+    .nav{
+        flex-direction: column;
+        gap: 1px;
+        
+    }
+
+    .nav .prev, .nav .next {
+        padding: 0;
+    }
+}
+
+@media (max-width: 660px) {
+    .pt1 {
+        flex-direction: column;
+    }
+
+    .title {
+        font-size: 28px;
+    }
 }
