--- a/src/Partials/Header/Header.module.css
+++ b/src/Partials/Header/Header.module.css
@@ -8,6 +8,7 @@
 
 .inpt {
     width: 40%;
+    min-width: 340px;
     height: 50px;
     background-color: #eee;
     display: flex;
@@ -53,4 +54,8 @@
 .opt:hover {
     transition: all .1s;
     background: #00000013;
+}
+
+@media (max-width: 600px) {
+    
 }
